--- a/UserSessionSample/Base.lproj/Main.storyboard
+++ b/UserSessionSample/Base.lproj/Main.storyboard
@@ -1,49 +1,38 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--#user_session_id-->
+        <!--User Session View Controller-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController storyboardIdentifier="UserSessionViewController" id="vXZ-lx-hvc" customClass="UserSessionViewController" customModule="UserSessionSample" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="#user_session_id" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RZz-ZK-cdY" userLabel="User Session Id Label">
-                                <rect key="frame" x="234" y="290" width="132" height="21"/>
+                                <rect key="frame" x="123" y="323" width="129.5" height="21"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="RZz-ZK-cdY" secondAttribute="centerY" id="Y79-tc-htY"/>
-                            <constraint firstAttribute="centerX" secondItem="RZz-ZK-cdY" secondAttribute="centerX" id="enK-kp-sDB"/>
+                            <constraint firstItem="k6Y-Z8-G5f" firstAttribute="centerX" secondItem="RZz-ZK-cdY" secondAttribute="centerX" id="enK-kp-sDB"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="k6Y-Z8-G5f"/>
                     </view>
-                    <navigationItem key="navigationItem" title="#user_session_id" id="som-Sy-ZIr">
-                        <barButtonItem key="leftBarButtonItem" style="plain" id="pkc-k2-EKs">
-                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Quk-pT-LiW" userLabel="Logout Button">
-                                <rect key="frame" x="186" y="188" width="49" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Logout">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="logout:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="BiN-Hf-E9V"/>
-                                </connections>
-                            </button>
-                        </barButtonItem>
-                    </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <outlet property="userSessionLabel" destination="RZz-ZK-cdY" id="5uj-px-qwC"/>
@@ -51,39 +40,37 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="33" y="90"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="wgZ-km-8DE">
             <objects>
                 <viewController storyboardIdentifier="LoginViewController" id="tLE-2S-PFV" customClass="LoginViewController" customModule="UserSessionSample" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="tDJ-d5-kk0"/>
-                        <viewControllerLayoutGuide type="bottom" id="kzr-26-UEW"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="zHl-gE-ope">
-                        <rect key="frame" x="0.0" y="64" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UAw-yE-AG9">
-                                <rect key="frame" x="279" y="285" width="43" height="30"/>
+                                <rect key="frame" x="166.5" y="318.5" width="42" height="30"/>
                                 <state key="normal" title="Login!">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                    <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="login:" destination="tLE-2S-PFV" eventType="touchUpInside" id="SMA-5w-rFh"/>
+                                    <action selector="loginWithSender:" destination="tLE-2S-PFV" eventType="touchUpInside" id="qAD-1G-mLr"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="UAw-yE-AG9" secondAttribute="centerX" id="5CM-hE-FfL"/>
+                            <constraint firstItem="RS2-mM-nTr" firstAttribute="centerX" secondItem="UAw-yE-AG9" secondAttribute="centerX" id="5CM-hE-FfL"/>
                             <constraint firstAttribute="centerY" secondItem="UAw-yE-AG9" secondAttribute="centerY" id="bbF-TE-9YN"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="RS2-mM-nTr"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oIK-no-kCc" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-403" y="337"/>
+            <point key="canvasLocation" x="-692" y="169"/>
         </scene>
     </scenes>
 </document>
